environment.Environment.scala.error
Compilation error:
Environment:8: error: illegal start of statement (no modifiers allowed here)
override def run() {
^